[package]
name = "malloc_test"
version = "0.1.0"
edition = "2021"
authors = ["z"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "malloc_test"
path = "src/lib.rs"

[dependencies]
speedb = { version = "0.0.4", default-features = false, features = [
    "lz4",
    "zstd",
    "jemalloc",
] }
env_logger = "0.11.2"
log = "0.4.20"
anyhow = "1.0.80"
tikv-jemalloc-ctl = { version = "0.5.4", features = ["use_std"] }
tikv-jemallocator = { version = "0.5.4", features = [
    "profiling",
    "stats",
    "background_threads",
] }
hyper = { version = "0.14.27", features = ["client", "stream"] }
axum = "0.6.20"
tokio = { version = "1.36.0", features = [
    "rt-multi-thread",
    "macros",
    "signal",
    "sync",
] }
